--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,27 +13,47 @@ import Hero from "../components/Hero.astro";
   <Section section={HOME.bestPractices} />
   <Section section={HOME.technologies} />
   <Section section={HOME.us} />
-  <aside class="container">
+   <aside class="container">
     <header>
-      <h1 class="">Te presento a AIDDbot</h1>
-      <p class="">
-        Un asistente IA de programación que aumenta tu IDE para desarrollos
-        corporativos.
-      </p>
+      <h1>Programación Inteligente (versión Video)</h1>
+      <h3>Curso de desarrollo profesional con IA</h3>
     </header>
     <main>
-      Siguiendo la filosofía <b>AI-Driven Development</b>, he desarrollado <code
-        >AIDDbot</code
-      >, un conjunto de herramientas (prompts, instrucciones, agentes, etc.)
-      para que puedas usar fácilmente toda la potencia de la IA en tu día a día.
+      <p>
+        Metodología AI-Driven Development dominar las nuevas primitivas de
+        programación con IA:
+        <code>specs, skills, prompts, context, agents y MCPs.</code>
+      </p>
+      <p>
+        <cite>
+          Más allá del Vibe Coding, crea software mantenible aplicando
+          herramientas IA a todo el ciclo de desarrollo.
+        </cite>
+      </p>
+      <p>
+        Aprovecha las ofertas de lanzamiento e inscríbete en la opción que más
+        te convenga.
+      </p>
     </main>
     <footer>
-      <a
-        role="button"
-        class="outline"
-        href="https://aicode.academy/community/opensource/aiddbot/"
-        target="_blank">Descubre más en AI Code Academy</a
-      >
+      <section>
+        <a
+          role="button"
+          class="outline"
+          href="https://www.udemy.com/course/programacion-inteligente-desarrollo-profesional-con-ia/"
+          target="_blank"
+          rel="noopener">Edición lite en Udemy</a
+        >
+      </section>
+      <section>
+        <a
+          role="button"
+          class="outline"
+          href="https://www.trainingit.es/producto/programacion-inteligente-ia/"
+          target="_blank"
+          rel="noopener">Edición empresarial en TrainingIT</a
+        >
+      </section>
     </footer>
   </aside>
 </Layout>
