--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -157,6 +157,49 @@ const FORMACION = {
 <Layout layout={FORMACION.layout}>
   <Hero hero={FORMACION.hero} />
   <main>
+    <aside class="container">
+      <header>
+        <h1>Programación Inteligente (versión Video)</h1>
+        <h3>Curso de desarrollo profesional con IA</h3>
+      </header>
+      <main>
+        <p>
+          Metodología AI-Driven Development dominar las nuevas primitivas de
+          programación con IA:
+          <code>specs, skills, prompts, context, agents y MCPs.</code>
+        </p>
+        <p>
+          <cite>
+            Más allá del Vibe Coding, crea software mantenible aplicando
+            herramientas IA a todo el ciclo de desarrollo.
+          </cite>
+        </p>
+        <p>
+          Aprovecha las ofertas de lanzamiento e inscríbete en la opción que más
+          te convenga.
+        </p>
+      </main>
+      <footer>
+        <section>
+          <a
+            role="button"
+            class="outline"
+            href="https://www.udemy.com/course/programacion-inteligente-desarrollo-profesional-con-ia/"
+            target="_blank"
+            rel="noopener">Edición lite en Udemy</a
+          >
+        </section>
+        <section>
+          <a
+            role="button"
+            class="outline"
+            href="https://www.trainingit.es/producto/programacion-inteligente-ia/"
+            target="_blank"
+            rel="noopener">Edición empresarial en TrainingIT</a
+          >
+        </section>
+      </footer>
+    </aside>
     <Section section={FORMACION.services} />
     <Section section={FORMACION.angular} />
     <Section section={FORMACION.testing} />
