--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Section from "@components/Section.astro";
 import { HOME } from "@content/home.content";
 import Layout from "@layouts/Layout.astro";
+import BlinkCursor from "../components/BlinkCursor.astro";
 import Hero from "../components/Hero.astro";
 ---
 
@@ -13,10 +14,11 @@ import Hero from "../components/Hero.astro";
   <Section section={HOME.bestPractices} />
   <Section section={HOME.technologies} />
   <Section section={HOME.us} />
-   <aside class="container">
-    <header>
-      <h1>Programación Inteligente (versión Video)</h1>
-      <h3>Curso de desarrollo profesional con IA</h3>
+  <aside class="container">
+    <header class="colored-headers">
+      <h1>Programación Inteligente</h1>
+      <p>Versión Video</p>
+      <h3>Curso de desarrollo profesional con I.A.</h3>
     </header>
     <main>
       <p>
@@ -31,8 +33,7 @@ import Hero from "../components/Hero.astro";
         </cite>
       </p>
       <p>
-        Aprovecha las ofertas de lanzamiento e inscríbete en la opción que más
-        te convenga.
+        Aprovecha las ofertas de lanzamiento. <BlinkCursor />
       </p>
     </main>
     <footer>
