--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import BlinkCursor from "@components/BlinkCursor.astro";
 import MatrixText from "@components/MatrixText.astro";
-import type { Cta } from "./Section.astro";
+import type { Cta } from "./Section.types";
 
 export type HeroProps = {
   title: string;
