--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
+import BlinkCursor from "../components/BlinkCursor.astro";
 import Hero from "../components/Hero.astro";
 import Section from "../components/Section.astro";
 
@@ -158,9 +159,10 @@ const FORMACION = {
   <Hero hero={FORMACION.hero} />
   <main>
     <aside class="container">
-      <header>
-        <h1>Programación Inteligente (versión Video)</h1>
-        <h3>Curso de desarrollo profesional con IA</h3>
+      <header class="colored-headers">
+        <h1>Programación Inteligente</h1>
+        <p>Versión Video</p>
+        <h3>Curso de desarrollo profesional con I.A.</h3>
       </header>
       <main>
         <p>
@@ -175,8 +177,7 @@ const FORMACION = {
           </cite>
         </p>
         <p>
-          Aprovecha las ofertas de lanzamiento e inscríbete en la opción que más
-          te convenga.
+          Aprovecha las ofertas de lanzamiento. <BlinkCursor />
         </p>
       </main>
       <footer>
