--- a/src/pages/formacion.astro
+++ b/src/pages/formacion.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import BlinkCursor from "../components/BlinkCursor.astro";
 import Hero from "../components/Hero.astro";
+import Promo from "../components/Promo.astro";
 import Section from "../components/Section.astro";
 
 const FORMACION = {
@@ -158,49 +158,7 @@ const FORMACION = {
 <Layout layout={FORMACION.layout}>
   <Hero hero={FORMACION.hero} />
   <main>
-    <aside class="container">
-      <header class="colored-headers">
-        <h1>Programación Inteligente</h1>
-        <p>Versión Video</p>
-        <h3>Curso de desarrollo profesional con I.A.</h3>
-      </header>
-      <main>
-        <p>
-          Metodología AI-Driven Development dominar las nuevas primitivas de
-          programación con IA:
-          <code>specs, skills, prompts, context, agents y MCPs.</code>
-        </p>
-        <p>
-          <cite>
-            Más allá del Vibe Coding, crea software mantenible aplicando
-            herramientas IA a todo el ciclo de desarrollo.
-          </cite>
-        </p>
-        <p>
-          Aprovecha las ofertas de lanzamiento. <BlinkCursor />
-        </p>
-      </main>
-      <footer>
-        <section>
-          <a
-            role="button"
-            class="outline"
-            href="https://www.udemy.com/course/programacion-inteligente-desarrollo-profesional-con-ia/"
-            target="_blank"
-            rel="noopener">Edición lite en Udemy</a
-          >
-        </section>
-        <section>
-          <a
-            role="button"
-            class="outline"
-            href="https://www.trainingit.es/producto/programacion-inteligente-ia/"
-            target="_blank"
-            rel="noopener">Edición empresarial en TrainingIT</a
-          >
-        </section>
-      </footer>
-    </aside>
+    <Promo />
     <Section section={FORMACION.services} />
     <Section section={FORMACION.angular} />
     <Section section={FORMACION.testing} />
