--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -9,7 +9,7 @@ const navItems: NavItem[] = [
   { href: "/formacion", text: "Formación" },
   { href: "/portfolio", text: "Portfolio" },
   {
-    href: "https://www.udemy.com/course/programacion-inteligente-desarrollo-profesional-con-ia/",
+    href: "https://www.udemy.com/course/programacion-inteligente-desarrollo-profesional-con-ia/?referralCode=C007FD1664EEB37226B8",
     text: "Udemy",
     external: true,
   },
